# amberium

./: .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/actions/install-solana/: action.yml
.github/workflows/: ci.yml  deploy.yml
app/: amberium-client.js  config.js  direct-client.js
docs/: design.md  usage.md
programs/amberium/: Cargo.toml
programs/amberium-token/: Anchor.toml  Cargo.toml
programs/amberium-token/src/: constants.rs  error.rs  lib.rs  state.rs
programs/amberium-token/src/instructions/: initialize.rs  mint.rs  mod.rs  register_asset.rs
programs/amberium/src/: lib.rs
scripts/: deploy_token.js
tests/: amberium.test.js  token.test.ts
