[package]
name = "amberium-token"
version = "0.1.0"
description = "Solana token backed by physical amber assets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amberium_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
